--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -3,4 +3,13 @@
     <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="re" value="require('$1$');" description="requrie" toReformat="false" toShortenFQNames="true">
+    <variable name="1" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
